[package]
name = "kq_fx"
version = "1.0.1"
edition = "2021"
publish = false
authors = [ 'Giancarlo A. Chiappe' ]

[lib]
crate-type = ["cdylib"]

[features]
default = ["pg17"]
# pg15 = ["pgrx/pg15", "pgrx-tests/pg15" ]
pg16 = ["pgrx/pg16", "pgrx-tests/pg16" ]
pg17 = ["pgrx/pg17", "pgrx-tests/pg17" ]
pg_test = []

[dependencies]
heapless = "=0.7.17"
pgrx = { version =  "=0.12.6", default-features = false, features = ["unsafe-postgres"] }

[dev-dependencies]
pgrx-tests = "0.12.6"

[profile.dev]
panic = "unwind"

[profile.release]
panic = "unwind"
#opt-level = 3
#lto = "fat"
#codegen-units = 1
